feat: make things work (#4)